# SATURN

p13.tarvos.notifier/: Makefile  README.md  pyproject.toml  setup.cfg
p13.tarvos.notifier/cmd/app/: main.py
p13.tarvos.notifier/docker/: .env.example  Dockerfile  README.md  docker-compose.yml  rabbitmq-compose.yml
p13.tarvos.notifier/internal/app/: app.py
p13.tarvos.notifier/internal/config/: events.py  settings.py
p13.tarvos.notifier/internal/controller/amqp/: router.py
p13.tarvos.notifier/internal/controller/amqp/v1/: __init__.py  mail.py
p13.tarvos.notifier/internal/dto/: mail.py
p13.tarvos.notifier/make/: compose.Makefile  lint.Makefile  run.Makefile
p13.tarvos.notifier/pkg/rabbitmq/rpc/: client.py  routing.py  server.py
