[tool.poetry]
name = "Tarvos Notifier"
version = "0.1.0"
description = ""
authors = ["Marsel Muldakaev <mma0603@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
aio-pika = "^8.3.0"
wemake-python-styleguide = "^0.17.0"
fastapi-mail = "^1.2.5"
gunicorn = "^20.1.0"
alembic = "^1.9.3"
SQLAlchemy = "^2.0.3"
mypy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
